Changes before Firebase Studio auto-run

--- a/src/main/resources/com/example/onride/HomeView.fxml
+++ b/src/main/resources/com/example/onride/HomeView.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label styleClass="title" text="Welcome to OnRide" />
-            <Label styleClass="subtitle" text="Your journey starts here." />
-         </children>
-      </VBox>
-   </center>
-</BorderPane>
+<VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Label styleClass="section-title" text="Welcome to OnRide" />
+      <Label styleClass="section-subtitle" text="Your journey starts here. Rent a vehicle today!" />
+   </children>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
+</VBox>
