--- a/src/main/resources/com/example/onride/AdminView.fxml
+++ b/src/main/resources/com/example/onride/AdminView.fxml
@@ -1,34 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="600.0" prefWidth="1000.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox styleClass="header">
          <children>
-            <Label styleClass="title" text="Admin Dashboard" />
-            <Label styleClass="subtitle" text="Manage users and system settings." />
+            <Label styleClass="title" text="OnRide" />
+            <Label styleClass="subtitle" text="Administrator Dashboard" />
          </children>
       </VBox>
    </top>
    <center>
-      <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
-        <tabs>
-          <Tab text="Users">
-               <content>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0" />
-               </content>
-          </Tab>
-          <Tab text="Settings">
-               <content>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0" />
-               </content>
-          </Tab>
-        </tabs>
-      </TabPane>
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label styleClass="section-title" text="Dashboard" />
+            <HBox alignment="CENTER" spacing="20.0">
+               <children>
+                  <VBox styleClass="summary-card">
+                     <children>
+                        <Label styleClass="summary-title" text="Total Users" />
+                        <Label fx:id="totalUsersLabel" styleClass="summary-value" text="0" />
+                     </children>
+                  </VBox>
+                  <VBox styleClass="summary-card">
+                     <children>
+                        <Label styleClass="summary-title" text="Total Rides" />
+                        <Label fx:id="totalRidesLabel" styleClass="summary-value" text="0" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <TabPane prefHeight="400.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="Users">
+                     <content>
+                        <BorderPane prefHeight="200.0" prefWidth="200.0" />
+                     </content>
+                </Tab>
+                <Tab text="Settings">
+                     <content>
+                        <BorderPane prefHeight="200.0" prefWidth="200.0" />
+                     </content>
+                </Tab>
+              </tabs>
+            </TabPane>
+         </children>
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
+      </VBox>
    </center>
 </BorderPane>
