--- a/src/main/resources/com/example/onride/RegistrationView.fxml
+++ b/src/main/resources/com/example/onride/RegistrationView.fxml
@@ -2,21 +2,19 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="600.0" prefWidth="1000.0" styleClass="root" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onride.controller.LoginViewController">
+<BorderPane prefHeight="600.0" prefWidth="1000.0" styleClass="root" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onride.controller.RegistrationViewController">
    <center>
       <VBox alignment="CENTER" maxWidth="400.0" spacing="20.0" styleClass="form-container" BorderPane.alignment="CENTER">
          <children>
             <Label styleClass="title" text="OnRide" />
-            <Label styleClass="subtitle" text="Welcome Back! Sign in to continue." />
+            <Label styleClass="subtitle" text="Create your account." />
             <GridPane hgap="10.0" vgap="15.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -25,22 +23,18 @@
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Email" />
-                  <TextField fx:id="emailField" styleClass="text-field" GridPane.columnIndex="1" />
-                  <Label text="Password" GridPane.rowIndex="1" />
-                  <PasswordField fx:id="passwordField" styleClass="text-field" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label text="Name" />
+                  <TextField fx:id="nameField" styleClass="text-field" GridPane.columnIndex="1" />
+                  <Label text="Email" GridPane.rowIndex="1" />
+                  <TextField fx:id="emailField" styleClass="text-field" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label text="Password" GridPane.rowIndex="2" />
+                  <PasswordField fx:id="passwordField" styleClass="text-field" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <Button onAction="#handleSignInButtonAction" styleClass="action-button" text="Sign In" />
-            <HBox alignment="CENTER" spacing="5.0">
-               <children>
-                  <Hyperlink onAction="#handleForgotPasswordLinkAction" text="Forgot password?" />
-                  <Label text="|" />
-                  <Hyperlink onAction="#handleSignUpLinkAction" text="Sign Up" />
-               </children>
-            </HBox>
+            <Button onAction="#handleRegisterButtonAction" styleClass="action-button" text="Register" />
          </children>
          <padding>
             <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
