--- a/src/main/resources/com/example/onride/SignUpView.fxml
+++ b/src/main/resources/com/example/onride/SignUpView.fxml
@@ -13,19 +13,13 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="600.0" prefWidth="1000.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onride.controller.SignUpViewController">
-   <top>
-      <VBox styleClass="header">
+<BorderPane prefHeight="600.0" prefWidth="1000.0" styleClass="root" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onride.controller.SignUpViewController">
+   <center>
+      <VBox alignment="CENTER" maxWidth="400.0" spacing="20.0" styleClass="form-container" BorderPane.alignment="CENTER">
          <children>
             <Label styleClass="title" text="OnRide" />
             <Label styleClass="subtitle" text="Create your account." />
-         </children>
-      </VBox>
-   </top>
-   <center>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
-         <children>
-            <GridPane hgap="10.0" vgap="10.0">
+            <GridPane hgap="10.0" vgap="15.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
@@ -56,7 +50,7 @@
             </HBox>
          </children>
          <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
          </padding>
       </VBox>
    </center>
