--- a/src/main/resources/com/example/onride/MainView.fxml
+++ b/src/main/resources/com/example/onride/MainView.fxml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-    <center>
-        <TabPane>
-            <tabs>
-                <Tab text="Vehicles">
-                    <fx:include source="VehiclesView.fxml" />
-                </Tab>
-                <Tab text="My Bookings">
-                    <fx:include source="MyBookingsView.fxml" />
-                </Tab>
-            </tabs>
-        </TabPane>
-    </center>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onride.controller.MainViewController">
+   <left>
+      <VBox prefHeight="600.0" prefWidth="200.0" style="-fx-background-color: #2c3e50;" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" onAction="#handleHomeButtonAction" prefHeight="50.0" prefWidth="200.0" text="Home" />
+            <Button mnemonicParsing="false" onAction="#handleVehiclesButtonAction" prefHeight="50.0" prefWidth="200.0" text="Vehicles" />
+            <Button mnemonicParsing="false" onAction="#handleMyBookingsButtonAction" prefHeight="50.0" prefWidth="200.0" text="My Bookings" />
+            <Button mnemonicParsing="false" onAction="#handleAdminButtonAction" prefHeight="50.0" prefWidth="200.0" text="Admin" />
+            <Button mnemonicParsing="false" onAction="#handleLogoutButtonAction" prefHeight="50.0" prefWidth="200.0" text="Logout" />
+         </children>
+         <padding>
+            <Insets top="20.0" />
+         </padding>
+      </VBox>
+   </left>
+   <center>
+      <VBox fx:id="contentArea" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
