--- a/src/main/resources/com/example/onride/MainView.fxml
+++ b/src/main/resources/com/example/onride/MainView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onride.controller.MainController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onride.controller.MainViewController">
     <left>
         <VBox styleClass="sidebar">
             <Button onAction="#navigateToDashboard" styleClass="sidebar-button" text="Dashboard" />
