--- a/src/main/resources/com/example/onride/VehiclesView.fxml
+++ b/src/main/resources/com/example/onride/VehiclesView.fxml
@@ -1,39 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onride.controller.VehiclesViewController">
-   <top>
-      <VBox spacing="10">
-         <padding>
-            <Insets bottom="10" left="10" right="10" top="10" />
-         </padding>
-         <HBox alignment="CENTER_LEFT" spacing="10">
-            <TextField fx:id="searchField" promptText="Search vehicles..." HBox.hgrow="ALWAYS" />
-            <ComboBox fx:id="filterCombo" promptText="Filter by type" />
-            <ComboBox fx:id="sortCombo" promptText="Sort by price" />
-             <Button text="Host a Vehicle" onAction="#handleHostVehicleAction"/>
-         </HBox>
-      </VBox>
-   </top>
-   <center>
-      <ScrollPane fitToWidth="true">
-         <GridPane fx:id="vehicleGrid" hgap="10" vgap="10">
+<BorderPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="com.example.onride.controller.VehiclesViewController"
+            stylesheets="@vehicle.css"
+            styleClass="vehicles-root">
+
+    <!-- HEADER -->
+    <top>
+        <VBox spacing="10" styleClass="page-header">
+            <Label text="Browse Vehicles" styleClass="page-title"/>
+            <Label text="Explore our extensive collection of premium bikes and cars."
+                   styleClass="page-subtitle"/>
+        </VBox>
+    </top>
+
+    <!-- CONTENT -->
+    <center>
+        <HBox spacing="30">
             <padding>
-               <Insets bottom="10" left="10" right="10" top="10" />
+                <Insets top="30" right="30" bottom="30" left="30"/>
             </padding>
-         </GridPane>
-      </ScrollPane>
-   </center>
+
+            <!-- FILTERS -->
+            <VBox spacing="20" styleClass="filter-panel">
+                <Label text="Filters" styleClass="filter-title"/>
+
+                <VBox spacing="8">
+                    <Label text="Location" styleClass="filter-label"/>
+                    <ComboBox fx:id="locationCombo" promptText="All Locations"/>
+                </VBox>
+
+                <VBox spacing="8">
+                    <Label text="Vehicle Type" styleClass="filter-label"/>
+                    <HBox spacing="10">
+                        <ToggleButton fx:id="allToggle" text="All" selected="true"/>
+                        <ToggleButton fx:id="bikesToggle" text="Bikes"/>
+                        <ToggleButton fx:id="carsToggle" text="Cars"/>
+                    </HBox>
+                </VBox>
+
+                <VBox spacing="8">
+                    <Label text="Price Range" styleClass="filter-label"/>
+                    <Slider fx:id="priceSlider" min="0" max="500" value="250"/>
+                </VBox>
+            </VBox>
+
+            <!-- VEHICLES -->
+            <VBox spacing="10" HBox.hgrow="ALWAYS">
+                <HBox spacing="10">
+                    <TextField fx:id="searchField" promptText="Search vehicles..." HBox.hgrow="ALWAYS"/>
+                    <ComboBox fx:id="filterCombo" promptText="Filter by type"/>
+                    <ComboBox fx:id="sortCombo" promptText="Sort by price"/>
+                    <Button text="Host a Vehicle" onAction="#handleHostVehicleAction"/>
+                </HBox>
+                
+                <ScrollPane fitToWidth="true" hbarPolicy="NEVER" VBox.vgrow="ALWAYS">
+                      <FlowPane fx:id="vehicleGrid"
+                                  hgap="25"
+                                  vgap="25"
+                                  prefWrapLength="900"/>
+                </ScrollPane>
+            </VBox>
+
+        </HBox>
+    </center>
+
 </BorderPane>
