--- a/src/main/resources/com/example/onride/VehicleCard.fxml
+++ b/src/main/resources/com/example/onride/VehicleCard.fxml
@@ -1,14 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="10" style="-fx-border-color: #ccc; -fx-border-width: 1px; -fx-padding: 10;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onride.controller.VehicleCardController">
-    <ImageView fx:id="vehicleImageView" fitHeight="150" fitWidth="200" pickOnBounds="true" preserveRatio="true" />
-    <Label fx:id="vehicleNameLabel" style="-fx-font-weight: bold;" />
-    <Label fx:id="priceLabel" />
-    <Button fx:id="bookButton" text="Book Now" onAction="#handleBookAction" />
+
+<VBox spacing="10"
+      fx:controller="com.example.onride.controller.VehicleCardController"
+      styleClass="vehicle-card"
+      xmlns="http://javafx.com/javafx"
+      xmlns:fx="http://javafx.com/fxml">
+
+    <ImageView fx:id="vehicleImage"
+               fitWidth="260"
+               fitHeight="150"
+               preserveRatio="true"/>
+
+    <Label fx:id="title"
+           styleClass="vehicle-title"/>
+
+    <Label fx:id="subtitle"
+           styleClass="vehicle-subtitle"/>
+
+    <Label fx:id="location"
+           styleClass="vehicle-meta"/>
+
+    <HBox spacing="10" alignment="CENTER_LEFT">
+        <Label fx:id="price"
+               styleClass="vehicle-price"/>
+
+        <Region HBox.hgrow="ALWAYS"/>
+
+        <Label fx:id="typeBadge"
+               styleClass="vehicle-badge"/>
+    </HBox>
+
 </VBox>
